--- a/app/src/main/res/drawable/profile.xml
+++ b/app/src/main/res/drawable/profile.xml
@@ -1,5 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="32"
-    android:viewportWidth="32" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000" android:pathData="M16,16A7,7 0,1 0,9 9,7 7,0 0,0 16,16ZM16,4a5,5 0,1 1,-5 5A5,5 0,0 1,16 4Z"/>
-    <path android:fillColor="#000000" android:pathData="M17,18H15A11,11 0,0 0,4 29a1,1 0,0 0,1 1H27a1,1 0,0 0,1 -1A11,11 0,0 0,17 18ZM6.06,28A9,9 0,0 1,15 20h2a9,9 0,0 1,8.94 8Z"/>
+<vector android:height="64dp" android:viewportHeight="23"
+    android:viewportWidth="23" android:width="64dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FC6A89"
+        android:pathData="M12,11.796C14.719,11.796 16.923,9.603 16.923,6.898C16.923,4.193 14.719,2 12,2C9.281,2 7.077,4.193 7.077,6.898C7.077,9.603 9.281,11.796 12,11.796Z"
+        android:strokeColor="#FC6A89" android:strokeWidth="1"/>
+    <path android:fillColor="#FC6A89"
+        android:pathData="M14.564,13.837H9.436C6.462,13.837 4,16.286 4,19.245C4,19.959 4.308,20.572 4.923,20.878C5.846,21.388 7.897,22 12,22C16.103,22 18.154,21.388 19.077,20.878C19.59,20.572 20,19.959 20,19.245C20,16.184 17.538,13.837 14.564,13.837Z"
+        android:strokeColor="#FC6A89" android:strokeWidth="1"/>
 </vector>
