--- a/app/src/main/res/layout/chat_message_recycler_row.xml
+++ b/app/src/main/res/layout/chat_message_recycler_row.xml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="18sp"
             android:text="Hello"
             android:id="@+id/left_chat_textview"/>
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/dark_gray"
             android:textSize="18sp"
             android:id="@+id/right_chat_textview"/>
     </LinearLayout>
