--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="off_white">#FAFAFA</color>
+    <color name="purple">#E0D3FF</color>
+    <color name="gray">#F1F1F1</color>
+    <color name="dark_gray">#606060</color>
 
 
-    <color name="chat_color_sender">#1E88E5</color>
-    <color name="chat_color_receiver">#7CB342</color>
+    <color name="chat_color_sender">#F1F1F1</color>
+    <color name="chat_color_receiver">#E0D3FF</color>
 </resources>
