--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,4 +26,10 @@
         android:layout_height="wrap_content"
         android:text="Choose image" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete last image" />
+
 </LinearLayout>
