--- a/app/src/main/res/drawable/circular_bg.xml
+++ b/app/src/main/res/drawable/circular_bg.xml
@@ -1,4 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Pressed state -->
+    <item android:state_pressed="true">
+        <shape android:shape="oval">
+            <solid android:color="@color/gray" />
+        </shape>
+    </item>
 
-</shape>
+    <!-- Default state -->
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="@color/white" />
+        </shape>
+    </item>
+</selector>
