--- a/app/src/main/res/layout/activity_horoscope_boarding.xml
+++ b/app/src/main/res/layout/activity_horoscope_boarding.xml
@@ -5,36 +5,71 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".boardingpages.horoscopeBoarding">
-    <TextView
-        android:id="@+id/tempDataTextViewgend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Temp Data: "
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        />
-    <TextView
-        android:id="@+id/tempDataTextViewgend2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Temp Data: "
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/tempDataTextViewgend"
-        />
-    <TextView
-        android:id="@+id/tempDataTextViewgend3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Temp Data: "
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/tempDataTextViewgend2"
-        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/boardingHoroImage"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginTop="40dp"
+                android:src="@drawable/constellations"
+                android:layout_gravity="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/boardingHoroTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Please choose your horoscope"
+                android:textSize="30sp"
+                android:textColor="#FA628D"
+                android:textStyle="bold"
+                android:textAlignment="viewStart"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="32dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/boardingAgeImage"
+                />
+
+            <TextView
+                android:id="@+id/boardingHoroContextSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="Which of the 12 stars are you, tell us more about it"
+                android:textSize="14sp"
+                android:textColor="#424242"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/boardingAgeTitle"
+                />
+
+            <NumberPicker
+                android:id="@+id/horoPicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_gravity="center"
+                app:layout_constraintTop_toBottomOf="@+id/boardingHoroContextSmall"
+                />
+
+            <Button
+                android:id="@+id/boardingHoroBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Next" />
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
