--- a/app/src/main/res/layout/activity_hobby_boarding.xml
+++ b/app/src/main/res/layout/activity_hobby_boarding.xml
@@ -45,6 +45,14 @@
         app:layout_constraintTop_toBottomOf="@+id/tempDataTextViewgend3"
         />
 
+    <Button
+        android:id="@+id/saveBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
