--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -92,12 +92,14 @@
                     android:id="@+id/aboutMeInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="16dp"
                     android:layout_marginTop="10dp"
-                    android:hint="Enter your 'About Me' here..."
                     android:background="@color/white"
+                    android:hint="Tell more about yourself..."
+                    android:textColorHint="@color/dark_gray"
+                    android:inputType="text"
+                    android:textColor="@color/dark_gray"
                     android:minHeight="48dp"
-                    android:inputType="text" />
+                    android:paddingHorizontal="16dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -128,8 +130,7 @@
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:paddingStart="18dp"
-                    android:text="Interests"
-                    android:textColor="@color/black"
+                    android:textColor="@color/dark_gray"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -171,7 +172,7 @@
                         android:layout_centerHorizontal="true"
                         android:gravity="center_vertical"
                         android:text="Everyone"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark_gray"
                         android:textSize="16sp" />
 
                     <ImageButton
@@ -246,30 +247,43 @@
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/distancePrefText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginStart="16dp"
-                    android:text="Maximum distance"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/distancePrefBlock"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_centerHorizontal="true"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/distancePrefText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginStart="16dp"
+                        android:text="Maximum distance"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/distancePrefValue"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="18dp"
+                        android:gravity="right|center"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:textStyle="bold"  />
+                </LinearLayout>
+
+                <com.google.android.material.slider.Slider
+                    android:id="@+id/distanceSlider"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:background="@color/white"
-                    android:clickable="true"
-                    android:gravity="center_vertical"
-                    android:paddingStart="18dp"
-                    android:text="5 km"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:stepSize="1"
+                    android:valueFrom="2"
+                    android:valueTo="50"
+                    app:labelBehavior="gone"
+                    android:background="@color/white"/>
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/basicInfo_layout"
@@ -474,14 +488,33 @@
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/profile_saveBtn"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:orientation="vertical"
+                android:gravity="center"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:text="Save" />
+                android:layout_marginBottom="10dp">
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/profile_revertBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginVertical="5dp"
+                    android:text="Cancel changes"
+                    />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/profile_saveBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginVertical="5dp"
+                    android:text="Save"
+                    android:backgroundTint="@color/purple_200"
+                    />
+
+            </LinearLayout>
 
 
         </LinearLayout>
