--- a/app/src/main/res/layout/activity_hobby_boarding.xml
+++ b/app/src/main/res/layout/activity_hobby_boarding.xml
@@ -5,45 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".boardingpages.hobbyBoarding">
-    <TextView
-        android:id="@+id/tempDataTextViewgend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        />
-    <TextView
-        android:id="@+id/tempDataTextViewgend2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/tempDataTextViewgend"
-        />
-    <TextView
-        android:id="@+id/tempDataTextViewgend3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/tempDataTextViewgend2"
-        />
-    <TextView
-        android:id="@+id/tempDataTextViewgend4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/tempDataTextViewgend3"
-        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/saveBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <Button
         android:id="@+id/saveBtn"
