--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -37,20 +37,21 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:hint="Username"
-        android:textColorHint="#aeaeae"
         android:background="@drawable/dai_login_textfield_custom"
+        android:hint="Email"
         android:padding="10dp"
+        android:textColorHint="#aeaeae"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerTextView"
-        />
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/passwordRegisterText"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:inputType="textPassword"
         android:hint="Password"
         android:textColorHint="#aeaeae"
         android:background="@drawable/dai_login_textfield_custom"
