--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -495,14 +495,14 @@
                 android:gravity="center"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp">
+
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/profile_revertBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginVertical="5dp"
-                    android:text="Cancel changes"
-                    />
+                    android:text="Cancel" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/profile_saveBtn"
