--- a/app/src/main/res/drawable/dotted_rectangle.xml
+++ b/app/src/main/res/drawable/dotted_rectangle.xml
@@ -4,7 +4,7 @@
     <!-- Background Rectangle -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/dark_gray" />
+            <solid android:color="@color/off_white" />
             <corners android:radius="20dp"/>
             <stroke
                 android:color="@color/white"
