--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -43,6 +43,15 @@
             app:tint="@color/white"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
+        <Button
+            android:id="@+id/unmatchBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="0dp"
+            android:text="Unmatch" />
+
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
