--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -43,13 +43,29 @@
             app:tint="@color/white"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/reportBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="12dp"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/unmatchBtn"
+            android:background="@drawable/custom_rounded_corner_btn"
+            android:text="Report"
+            android:textColor="@color/btn_text_red"
+            android:visibility="gone"/>
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/unmatchBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="0dp"
+            android:background="@drawable/custom_rounded_corner_btn"
+android:backgroundTint="@color/btn_gray"
+            android:textColor="@color/btn_text_cyan"
             android:text="Unmatch" />
 
     </RelativeLayout>
