Live data userlist and reportcase

--- a/app/src/main/res/layout/item_report_case.xml
+++ b/app/src/main/res/layout/item_report_case.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- user_list_item.xml -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="5dp">
@@ -21,20 +19,20 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/userName"
+            android:id="@+id/caseId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
+            android:text="Id"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:layout_marginBottom="5dp"/>
 
         <TextView
-            android:id="@+id/userId"
+            android:id="@+id/offenderName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Offender: "
             android:textColor="@color/black"/>
     </LinearLayout>
 
@@ -50,21 +48,22 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/role"
+            android:id="@+id/reportTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Role: Regular"
+            android:text="Time"
             android:textColor="@color/black"
             android:textSize="16sp"
+            android:textStyle="bold"
             android:layout_marginBottom="5dp"/>
 
         <TextView
-            android:id="@+id/status"
+            android:id="@+id/reporterName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textColor="@color/black"
-            android:text="Status: Active" />
+            android:text="Reporter: " />
     </LinearLayout>
 
 
