Add case resolve function

--- a/app/src/main/res/layout/item_report_case.xml
+++ b/app/src/main/res/layout/item_report_case.xml
@@ -32,6 +32,7 @@
             android:id="@+id/offenderName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="16sp"
             android:text="Offender: "
             android:textColor="@color/black"/>
     </LinearLayout>
