--- a/app/src/main/res/layout/fragment_report_case.xml
+++ b/app/src/main/res/layout/fragment_report_case.xml
@@ -8,12 +8,17 @@
     tools:context=".Fragments_Admin.ReportCaseFragment">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/no_data_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Report case"
+        android:layout_marginTop="24dp"
+        android:text="No report case now"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewReport"
@@ -22,6 +27,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/no_data_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
