--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,8 @@
     <color name="btn_text_red">#F81910</color>
     <color name="btn_gray">#EDE7E1</color>
     <color name="btn_text_cyan">#1BAAA9</color>
-
+    <color name="btn_green">#1F423F</color>
+    <color name="btn_text_green">#4EC74B</color>
 
     <color name="chat_color_sender">#F1F1F1</color>
     <color name="chat_color_receiver">#E0D3FF</color>
