fix the Logo app + UI boarding pages

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="gray">#F1F1F1</color>
     <color name="dark_gray">#606060</color>
     <color name="light_gray">#F2F3F5</color>
-
+    <color name="apppink">#FA628D</color>
 
     <color name="chat_color_sender">#F1F1F1</color>
     <color name="chat_color_receiver">#E0D3FF</color>
